--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,14 @@
     <title>Snowpack App</title>
   </head>
   <body>
-    <img id="img" src="/logo.svg" />
-    <canvas id="canvas"></canvas>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="body">
+    <img src="https://cdn.discordapp.com/attachments/917772347107340298/947861181102719067/demon-slayer.gif" alt="" class="img">
+    <button id="start">Clique ici pour commencer</button>
+    <button id="pause">pause</button>
+    <button id="unpose">reprendre</button>
+    <button id="reset">reset</button>
+    <p class="texte"></p>
+  </div>
     <script type="module" src="/dist/index.js"></script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
